lint and fix code based on sonarlint suggestions